# sos-django-template

./: .editorconfig  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  conftest.py  dev.requirements.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt  ubuntu.requirements.txt  ubuntu20.requirements.bash
core/: factories.py  models.py  views.py
core/migrations/: 0001_initial.py
project/: celery.py  urls.py  wsgi.py
project/fixtures/: __init__.py
project/settings/: base.py  defaults.py  development.py  production.py
